@@ -28,6 +28,8 @@ Library
 - Issue #20242: Fixed basicConfig() format strings for the alternative
   formatting styles. Thanks to kespindler for the bug report and patch.
 
+- Issue #20246: Fix buffer overflow in socket.recvfrom_into.
+
 - Issues #20206 and #5803: Fix edge case in email.quoprimime.encode where it
   truncated lines ending in a character needing encoding but no newline by
   using a more efficient algorithm that doesn't have the bug.
